--- a/content/contact/_index.html
+++ b/content/contact/_index.html
@@ -4,5 +4,82 @@
 
 <div class="container m-b-3">
   <h1>Contact Us</h1>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScK1onMAwf2oAUQw7EdA06guRqV_IfZy-IegY1hmxj2Kz95NA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  <form action="https://formspree.io/info@bruiserconversions.com" method="POST">
+
+    <div class="form-group">
+      <label for="full-name">Full Name <small>(required)</small></label>
+      <input name="full-name" type="text" class="form-control" id="full-name" aria-describedby="nameHelp" placeholder="Enter your name." required="true">
+    </div>
+
+    <div class="form-group">
+      <label for="phone-number">Phone Number <small>(required)</small></label>
+      <input name="phone-number" type="tel" class="form-control" id="phone-number" aria-describedby="numberHelp" placeholder="Enter your phone number." required="true">
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email <small>(required)</small></label>
+      <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter your email address." required="true">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+
+    <div class="form-group">
+      <label for="timeline">Timeline</label>
+      <input name="timeline" type="text" class="form-control" id="timeline" aria-describedby="timelineHelp" placeholder="When do you want to start?">
+    </div>
+
+    <div class="form-group">
+      <label for="budget">Budget</label>
+      <input name="budget" type="text" class="form-control" id="budget" aria-describedby="budgetHelp" placeholder="What is your budget?">
+    </div>
+
+    <div class="form-group">
+      <label for="jeep">Jeep Model</label>
+      <input name="jeep" type="text" class="form-control" id="jeep" aria-describedby="jeepHelp" placeholder="Year/Make/Model">
+    </div>
+
+    <fieldset class="form-group">
+      <legend>Conversion Type</legend>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type1" value="LS" checked>
+          LS
+        </label>
+      </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type2" value="Hemi">
+          Hemi
+        </label>
+      </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type3" value="Diesel">
+          Diesel
+        </label>
+      </div>
+    </fieldset>
+
+    <fieldset class="form-group">
+      <legend>Transmission Type</legend>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type1" value="Automatic" checked>
+          Automatic
+        </label>
+      </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type2" value="Manual">
+          Manual
+        </label>
+      </div>
+    </fieldset>
+
+    <div class="form-group">
+      <label for="other-modifications">Other Modifications</label>
+      <textarea name="other-modifications" class="form-control" id="other-modifications" rows="6" placeholder="Tires, Lift, Gear Ratio, Axles, Driveshafts, etc."></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-brand">Submit</button>
+  </form>
 </div>
