fix links and erb refs

--- a/content/hemi_conversions/_index.html
+++ b/content/hemi_conversions/_index.html
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 p-t-2">
-        <h2 class="m-b-2" style="text-align: center"><%= t(:conversion_specs) %></h2>
+        <h2 class="m-b-2" style="text-align: center">Conversion Specs</h2>
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
             <td></td>
@@ -122,7 +122,7 @@
           </tr>
         </table>
 
-        <h2 class="m-b-2" style="text-align: center"><%= t(:kit_pricing) %></h2>
+        <h2 class="m-b-2" style="text-align: center">Kit Pricing</h2>
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
             <td>2012 to 2016 6.4L ** Hemi Auto Package</td>
