--- a/content/reviews/_index.html
+++ b/content/reviews/_index.html
@@ -622,7 +622,7 @@
         Conversions where I was given a complete tour and filled with a ton of
         knowledge. Jeff will blow your mind with his passion and expertise! Left
         the Jeep in Bruiser's hands and returned to pick it up on
-        Friday Jan. 9th. Yes, that is correct – One week for the conversion.
+        Friday Jan. 9th. Yes, that is correct - One week for the conversion.
         And not just the conversion, they painted my rear wheel wells.
       </p>
       <p>
@@ -637,7 +637,7 @@
       <p>
         Bruiser was able to retain the transmission
         in the Jeep based on its capabilities. The WA580, Nag1. When you want
-        some torque – hang on!!! It has been approximately 2 months since I
+        some torque - hang on!!! It has been approximately 2 months since I
         picked the jeep up and I am still completely amazed at what this
         conversion did. The power, the maneuverability, and the fit and finish
         are truly amazing. I have received follow up calls from Jeff in regards
