--- a/public/ls_conversions/index.html
+++ b/public/ls_conversions/index.html
@@ -92,7 +92,7 @@
       <h2>Power</h2>
       <p>
         The LS conversion provides unprecedented power in the form of speed,
-        acceleration, and torque. Our baseline options range from 450hp – 1000hp
+        acceleration, and torque. Our baseline options range from 450hp - 1000hp
         with the 450 HP LS3 being the most popular.
       </p>
 		</div>
