--- a/public/overlander/index.html
+++ b/public/overlander/index.html
@@ -91,7 +91,7 @@
         full-size front and rear doors for easy access to the cockpit and cabin.
         The exterior of the body is clad in a complete GenRight Off Road bumper
         and armor package, Warn Zeon 10s winch with Factor 55 UltraHook, with
-        TnT Customs aluminum skid plates to protect your vehicle while it’s
+        TnT Customs aluminum skid plates to protect your vehicle while it's
         being put to the test.
       </p>
 
