--- a/public/overlander/index.html
+++ b/public/overlander/index.html
@@ -141,13 +141,13 @@
         <div class="nav-title">Body</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="body/super_cab">Super Cab</a>
+            <a href="/super_cab">Super Cab</a>
           </li>
           <li class="nav-item">
-            <a href="body/jk_crew">JK Crew</a>
+            <a href="/jk_crew">JK Crew</a>
           </li>
           <li class="nav-item">
-            <a href="body/overlander">Overlander</a>
+            <a href="/overlander">Overlander</a>
           </li>
         </ul>
       </div>
