Overlander Main Image
Reduce image size

--- a/content/overlander/_index.html
+++ b/content/overlander/_index.html
@@ -1,6 +1,9 @@
-<div class="container">
-  <div class="row m-b-3">
-    <h1 class="m-t-2 m-b-2" style="text-align: center">Jeep Overlander Conversion</h1>
+<div class="cover">
+  <h1>Jeep Overlander Conversion</h1>
+  <img src="/images/overlander-main.jpg" style='position: absolute; bottom: -75px;' />
+</div>
+ 	<div class="container">
+  	<div class="row m-b-3">
     <div class="col-sm-6">
       <img src="/images/jeep-overlander-001.jpg" class="img-fluid" />
     </div>
