--- a/content/super_cab/_index.html
+++ b/content/super_cab/_index.html
@@ -19,6 +19,21 @@
       <img src="/images/galleries/super-cab/super-cab-10.jpg">
       <img src="/images/galleries/super-cab/super-cab-11.jpg">
       <img src="/images/galleries/super-cab/super-cab-12.jpg">
+      <img src="/images/galleries/super-cab/super-cab-13.jpg">
+      <img src="/images/galleries/super-cab/super-cab-14.jpg">
+      <img src="/images/galleries/super-cab/super-cab-15.jpg">
+      <img src="/images/galleries/super-cab/super-cab-16.jpg">
+      <img src="/images/galleries/super-cab/super-cab-17.jpg">
+      <img src="/images/galleries/super-cab/super-cab-18.jpg">
+      <img src="/images/galleries/super-cab/super-cab-19.jpg">
+      <img src="/images/galleries/super-cab/super-cab-21.jpg">
+      <img src="/images/galleries/super-cab/super-cab-22.jpg">
+      <img src="/images/galleries/super-cab/super-cab-23.jpg">
+      <img src="/images/galleries/super-cab/super-cab-24.jpg">
+      <img src="/images/galleries/super-cab/super-cab-25.jpg">
+      <img src="/images/galleries/super-cab/super-cab-26.jpg">
+      <img src="/images/galleries/super-cab/super-cab-27.jpg">
+      <img src="/images/galleries/super-cab/super-cab-28.jpg">
    </div>
 	<script>
 (function() { 
