--- a/content/super_cab/_index.html
+++ b/content/super_cab/_index.html
@@ -1,4 +1,4 @@
-<div class="cover">
+ <div class="cover">
   <h1 style="margin-top: 200px">Super Cab Conversion</h1>
   <img src="/images/jeep-super-cab-001.jpg" style="position: absolute; bottom: -100px;" />
 </div>
@@ -35,12 +35,13 @@
       <img src="/images/galleries/super-cab/super-cab-27.jpg">
       <img src="/images/galleries/super-cab/super-cab-28.jpg">
    </div>
-	<script>
-(function() { 
-    Galleria.loadTheme('/js/galleria.classic.min.js');
-    Galleria.run('.galleria');
-}());
-</script>
+    <script>
+    $(function() {
+        // Initialize Galleria
+        Galleria.run('.galleria',{autoplay: 7000
+});
+    });
+    </script>
     </div>
     <div class="col-sm-6">
       <h2>Overview</h2>
