improve page urls SEO

--- a/public/certified-installation-facilities/index.html
+++ b/public/certified-installation-facilities/index.html
@@ -74,89 +74,28 @@
 
     
   <div class="cover">
-  <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
+  <h1>Certified Installation Facilities</h1>
+  <img src="/images/certified-installation-facilities-002.jpg" style="position: absolute; bottom: -300px;" />
 </div>
 
-<div class="container m-b-3">
-  <h1>Contact Us</h1>
-  <form action="https://formspree.io/info@bruiserconversions.com" method="POST">
-
-    <div class="form-group">
-      <label for="full-name">Full Name <small>(required)</small></label>
-      <input name="full-name" type="text" class="form-control" id="full-name" aria-describedby="nameHelp" placeholder="Enter your name." required="true">
+<div class="container">
+  <div class="row m-b-3">
+    <div class="col-sm-12" style="text-align: center">
+      <p>
+        The following shops are Certified Installation Facilities where Bruiser
+        Conversions LS Engine packages are available for installation in your
+        vehicle.
+      </p>
+      <p>
+        <a href="http://dixie4wheeldrive.com/" target="_blank">Dixie 4 Wheel Drive</a> - St. George, UT (CIF)<br>
+        <a href="http://impulseoffroad.com/" target="_blank">Impulse Offroad</a> - Salt Lake City, UT (CIF)<br>
+        <a href="http://mikesoffroad.com/en/" target="_blank">Mike's Off Road Accessories</a> - Haltom City, TX (CIF)<br>
+        <a href="http://nicholsautofab.com/" target="_blank">Nichols Auto Fab</a> - Prescott, AZ (CIF)<br>
+        <a href="http://dakota-customs.com/" target="_blank">Dakota Customs</a> - Rapid City, SD (CIF)<br>
+        <a href="http://www.savvyoffroad.com/" target="_blank">Savvy Offroad</a> - Corona, CA (CIF)
+      </p>
     </div>
-
-    <div class="form-group">
-      <label for="phone-number">Phone Number <small>(required)</small></label>
-      <input name="phone-number" type="tel" class="form-control" id="phone-number" aria-describedby="numberHelp" placeholder="Enter your phone number." required="true">
-    </div>
-
-    <div class="form-group">
-      <label for="email">Email <small>(required)</small></label>
-      <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter your email address." required="true">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-
-    <div class="form-group">
-      <label for="timeline">Timeline</label>
-      <input name="timeline" type="text" class="form-control" id="timeline" aria-describedby="timelineHelp" placeholder="When do you want to start?">
-    </div>
-
-    <div class="form-group">
-      <label for="budget">Budget</label>
-      <input name="budget" type="text" class="form-control" id="budget" aria-describedby="budgetHelp" placeholder="What is your budget?">
-    </div>
-
-    <div class="form-group">
-      <label for="jeep">Jeep Model</label>
-      <input name="jeep" type="text" class="form-control" id="jeep" aria-describedby="jeepHelp" placeholder="Year/Make/Model">
-    </div>
-
-    <fieldset class="form-group">
-      <legend>Conversion Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type1" value="LS" checked>
-          LS
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type2" value="Hemi">
-          Hemi
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type3" value="Diesel">
-          Diesel
-        </label>
-      </div>
-    </fieldset>
-
-    <fieldset class="form-group">
-      <legend>Transmission Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type1" value="Automatic" checked>
-          Automatic
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type2" value="Manual">
-          Manual
-        </label>
-      </div>
-    </fieldset>
-
-    <div class="form-group">
-      <label for="other-modifications">Other Modifications</label>
-      <textarea name="other-modifications" class="form-control" id="other-modifications" rows="6" placeholder="Tires, Lift, Gear Ratio, Axles, Driveshafts, etc."></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-brand">Submit</button>
-  </form>
+  </div><!-- row -->
 </div>
 
 
