--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -37,11 +37,11 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Engine Conversions</h6>
-        <a href="/ls_conversions" class="dropdown-item">LS</a>
-        <a href="/hemi_conversions" class="dropdown-item">Hemi</a>
-        <a href="/diesel_conversions" class="dropdown-item">Diesel</a>
+        <a href="/jeep-ls-conversions" class="dropdown-item">LS</a>
+        <a href="/jeep-hemi-conversions" class="dropdown-item">Hemi</a>
+        <a href="/jeep-diesel-conversions" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
-        <a href="/certified_installation_facilities" class="dropdown-item">Certified Installation Facilities</a>
+        <a href="/certified-installation-facilities" class="dropdown-item">Certified Installation Facilities</a>
       </div>
     </li>
 
@@ -50,10 +50,10 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Wrangler Base (2-Door)</h6>
-        <a href="/super_cab" class="dropdown-item">Super Cab</a>
+        <a href="/super-cab" class="dropdown-item">Super Cab</a>
         <div class="dropdown-divider"></div>
         <h6 class="dropdown-header">Wrangler Unlimited Base (4-Door)</h6>
-        <a href="/jk_crew" class="dropdown-item">JK Crew</a>
+        <a href="/jk-crew" class="dropdown-item">JK Crew</a>
         <a href="/overlander" class="dropdown-item">Overlander</a>
       </div>
     </li>
@@ -109,13 +109,13 @@
         <div class="nav-title">Power</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/ls_conversions">LS</a>
+            <a href="/jeep-ls-conversions">LS</a>
           </li>
           <li class="nav-item">
-            <a href="/hemi_conversions">Hemi</a>
+            <a href="/jeep-hemi-conversions">Hemi</a>
           </li>
           <li class="nav-item">
-            <a href="/diesel_conversions">Diesel</a>
+            <a href="/jeep-diesel-conversions">Diesel</a>
           </li>
         </ul>
       </div>
@@ -123,10 +123,10 @@
         <div class="nav-title">Body</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/super_cab">Super Cab</a>
+            <a href="/super-cab">Super Cab</a>
           </li>
           <li class="nav-item">
-            <a href="/jk_crew">JK Crew</a>
+            <a href="/jk-crew">JK Crew</a>
           </li>
           <li class="nav-item">
             <a href="/overlander">Overlander</a>
