--- a/public/jk-crew/index.html
+++ b/public/jk-crew/index.html
@@ -74,89 +74,97 @@
 
     
   <div class="cover">
-  <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
+  <h1 style="margin-top: 200px">JK Crew Conversion</h1>
+  <img src="/images/jk-crew-conversion-002.jpg" style="position: absolute; bottom: -100px;" />
 </div>
 
-<div class="container m-b-3">
-  <h1>Contact Us</h1>
-  <form action="https://formspree.io/info@bruiserconversions.com" method="POST">
-
-    <div class="form-group">
-      <label for="full-name">Full Name <small>(required)</small></label>
-      <input name="full-name" type="text" class="form-control" id="full-name" aria-describedby="nameHelp" placeholder="Enter your name." required="true">
+<div class="container">
+  <div class="row m-b-3">
+    <div class="col-sm-6">
+<div class="galleria">              
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-1.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-2.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-3.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-4.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-5.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-6.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-7.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-8.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-9.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-10.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-11.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-12.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-13.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-14.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-15.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-16.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-17.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-18.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-19.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-20.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-21.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-22.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-23.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-24.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-26.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-27.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-28.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-29.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-30.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-31.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-32.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-33.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-34.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-35.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-36.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-37.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-38.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-39.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-1.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-2.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-3.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-4.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-5.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-6.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-7.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-8.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-9.jpg">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-10.jpg">
+   </div>
+    <script>
+    $(function() {
+        // Initialize Galleria
+        Galleria.run('.galleria',{autoplay: 7000
+});
+    });
+    </script>
     </div>
+    <div class="col-sm-6">
+      <h2>Overview</h2>
+      <p>
+        The JK Crew started as a concept vehicle engineered in the imagination
+        and heart of our team. The design is inspired from the desire of the
+        Jeep community for a Jeep pickup. What started as dream began
+        taking shape on paper and slowly became a truly iconic vehicle capturing
+        the spirit of rugged exploration.
+      </p>
 
-    <div class="form-group">
-      <label for="phone-number">Phone Number <small>(required)</small></label>
-      <input name="phone-number" type="tel" class="form-control" id="phone-number" aria-describedby="numberHelp" placeholder="Enter your phone number." required="true">
+      <h2>Vehicle Design</h2>
+      <p>
+        Forged with form and function in mind, the JK Crew performs as
+        comfortable off-road as on. A 5'x4'-6"' bed is added to a standard
+        four-door Jeep Wrangler for increased carrying capacity. The custom
+        fabricated bed design is ready to go anywhere with intentional descent
+        angle clearance.
+      </p>
+
+      <h2>Pricing</h2>
+      <p>
+        Pricing for the JK Crew conversion starts at $35,000 and is dependent
+        on the full build sheet. For more details please contact us.
+      </p>
     </div>
-
-    <div class="form-group">
-      <label for="email">Email <small>(required)</small></label>
-      <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter your email address." required="true">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-
-    <div class="form-group">
-      <label for="timeline">Timeline</label>
-      <input name="timeline" type="text" class="form-control" id="timeline" aria-describedby="timelineHelp" placeholder="When do you want to start?">
-    </div>
-
-    <div class="form-group">
-      <label for="budget">Budget</label>
-      <input name="budget" type="text" class="form-control" id="budget" aria-describedby="budgetHelp" placeholder="What is your budget?">
-    </div>
-
-    <div class="form-group">
-      <label for="jeep">Jeep Model</label>
-      <input name="jeep" type="text" class="form-control" id="jeep" aria-describedby="jeepHelp" placeholder="Year/Make/Model">
-    </div>
-
-    <fieldset class="form-group">
-      <legend>Conversion Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type1" value="LS" checked>
-          LS
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type2" value="Hemi">
-          Hemi
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type3" value="Diesel">
-          Diesel
-        </label>
-      </div>
-    </fieldset>
-
-    <fieldset class="form-group">
-      <legend>Transmission Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type1" value="Automatic" checked>
-          Automatic
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type2" value="Manual">
-          Manual
-        </label>
-      </div>
-    </fieldset>
-
-    <div class="form-group">
-      <label for="other-modifications">Other Modifications</label>
-      <textarea name="other-modifications" class="form-control" id="other-modifications" rows="6" placeholder="Tires, Lift, Gear Ratio, Axles, Driveshafts, etc."></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-brand">Submit</button>
-  </form>
+  </div><!-- row -->
 </div>
 
 
