--- a/public/super-cab/index.html
+++ b/public/super-cab/index.html
@@ -74,89 +74,80 @@
 
     
   <div class="cover">
-  <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
+  <h1 style="margin-top: 200px">Super Cab Conversion</h1>
+  <img src="/images/jeep-super-cab-001.jpg" style="position: absolute; bottom: -100px;" />
 </div>
 
-<div class="container m-b-3">
-  <h1>Contact Us</h1>
-  <form action="https://formspree.io/info@bruiserconversions.com" method="POST">
-
-    <div class="form-group">
-      <label for="full-name">Full Name <small>(required)</small></label>
-      <input name="full-name" type="text" class="form-control" id="full-name" aria-describedby="nameHelp" placeholder="Enter your name." required="true">
+<div class="container">
+  <div class="row m-b-3">
+    <div class="col-sm-6">
+      <div class="galleria">              
+      <img src="/images/galleries/super-cab/super-cab-1.jpg">
+      <img src="/images/galleries/super-cab/super-cab-2.jpg">
+      <img src="/images/galleries/super-cab/super-cab-3.jpg">
+      <img src="/images/galleries/super-cab/super-cab-4.jpg">
+      <img src="/images/galleries/super-cab/super-cab-5.jpg">
+      <img src="/images/galleries/super-cab/super-cab-6.jpg">
+      <img src="/images/galleries/super-cab/super-cab-7.jpg">
+      <img src="/images/galleries/super-cab/super-cab-8.jpg">
+      <img src="/images/galleries/super-cab/super-cab-9.jpg">
+      <img src="/images/galleries/super-cab/super-cab-10.jpg">
+      <img src="/images/galleries/super-cab/super-cab-11.jpg">
+      <img src="/images/galleries/super-cab/super-cab-12.jpg">
+      <img src="/images/galleries/super-cab/super-cab-13.jpg">
+      <img src="/images/galleries/super-cab/super-cab-14.jpg">
+      <img src="/images/galleries/super-cab/super-cab-15.jpg">
+      <img src="/images/galleries/super-cab/super-cab-16.jpg">
+      <img src="/images/galleries/super-cab/super-cab-17.jpg">
+      <img src="/images/galleries/super-cab/super-cab-18.jpg">
+      <img src="/images/galleries/super-cab/super-cab-19.jpg">
+      <img src="/images/galleries/super-cab/super-cab-21.jpg">
+      <img src="/images/galleries/super-cab/super-cab-22.jpg">
+      <img src="/images/galleries/super-cab/super-cab-23.jpg">
+      <img src="/images/galleries/super-cab/super-cab-24.jpg">
+      <img src="/images/galleries/super-cab/super-cab-25.jpg">
+      <img src="/images/galleries/super-cab/super-cab-26.jpg">
+      <img src="/images/galleries/super-cab/super-cab-27.jpg">
+      <img src="/images/galleries/super-cab/super-cab-28.jpg">
+   </div>
+    <script>
+    $(function() {
+        // Initialize Galleria
+        Galleria.run('.galleria',{autoplay: 7000
+});
+    });
+    </script>
     </div>
+    <div class="col-sm-6">
+      <h2>Overview</h2>
+      <p>
+        The Bruiser Super Cab combines the capabilities of the 2-door Jeep
+        Wrangler and the Bruiser JK Crew, providing a nimbler vehicle to conquer
+        your terrain and provides the cargo carrying benefits of a truck bed.
+      </p>
 
-    <div class="form-group">
-      <label for="phone-number">Phone Number <small>(required)</small></label>
-      <input name="phone-number" type="tel" class="form-control" id="phone-number" aria-describedby="numberHelp" placeholder="Enter your phone number." required="true">
+      <h2>Vehicle Design</h2>
+      <p>
+        The Super Cab is equipped with a 550 HP Bruiser Conversions LS3, Atlas
+        3.0 transfer case, a Currie Enterprises short arm suspension, and
+        Ultimate Dana 60 axles. It is equipped with a 5'x4'-6"' utility bed and
+        a high departure angle frame with a full width HDPE skid plate. Access
+        to the integrated 2” Reese receiver is gained using the flip-up license
+        plate bracket, which also folds up to avoid damage while driving off road.
+        The exterior features Rigid Industries LED lighting, a Savvy Offroad
+        front bumper, Warn Zeon 10s winch with Factor55 Flat-Link, GenRight Off
+        Road rocker guards, and TnT Customs aluminum belly skid plates.
+        The custom soft top maintains the factory “SunRider” option and is
+        easily removable if you desire to do so.
+      </p>
+
+      <h2>Pricing</h2>
+      <p>
+        Pricing for the Super Cab conversion starts at $35,000 and is dependent
+        on the full build sheet. For more details please contact us.
+      </p>
     </div>
-
-    <div class="form-group">
-      <label for="email">Email <small>(required)</small></label>
-      <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter your email address." required="true">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-
-    <div class="form-group">
-      <label for="timeline">Timeline</label>
-      <input name="timeline" type="text" class="form-control" id="timeline" aria-describedby="timelineHelp" placeholder="When do you want to start?">
-    </div>
-
-    <div class="form-group">
-      <label for="budget">Budget</label>
-      <input name="budget" type="text" class="form-control" id="budget" aria-describedby="budgetHelp" placeholder="What is your budget?">
-    </div>
-
-    <div class="form-group">
-      <label for="jeep">Jeep Model</label>
-      <input name="jeep" type="text" class="form-control" id="jeep" aria-describedby="jeepHelp" placeholder="Year/Make/Model">
-    </div>
-
-    <fieldset class="form-group">
-      <legend>Conversion Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type1" value="LS" checked>
-          LS
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type2" value="Hemi">
-          Hemi
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="conversion-type" id="conversion-type3" value="Diesel">
-          Diesel
-        </label>
-      </div>
-    </fieldset>
-
-    <fieldset class="form-group">
-      <legend>Transmission Type</legend>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type1" value="Automatic" checked>
-          Automatic
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input type="radio" class="form-check-input" name="transmission-type" id="transmission-type2" value="Manual">
-          Manual
-        </label>
-      </div>
-    </fieldset>
-
-    <div class="form-group">
-      <label for="other-modifications">Other Modifications</label>
-      <textarea name="other-modifications" class="form-control" id="other-modifications" rows="6" placeholder="Tires, Lift, Gear Ratio, Axles, Driveshafts, etc."></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-brand">Submit</button>
-  </form>
+  </div><!-- row -->
 </div>
 
 
