--- a/content/jeep-ls-conversions/_index.html
+++ b/content/jeep-ls-conversions/_index.html
@@ -1,3 +1,7 @@
++++
+title = "Jeep Wrangler LS Conversions"
++++
+
 <div class="cover">
   <h1>Jeep Wrangler LS Conversion</h1>
   <img src="/images/jeep-ls-engine-conversion-001.jpg" style='position: absolute; bottom: -75px;' />
@@ -6,7 +10,7 @@
 <div class="container">
 	<div class="row m-b-3">
     <div class="col-sm-6">
-       <div class="galleria">              
+       <div class="galleria">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg">
