--- a/content/jeep-diesel-conversions/_index.html
+++ b/content/jeep-diesel-conversions/_index.html
@@ -1,3 +1,7 @@
++++
+title = "Jeep Wrangler Diesel Conversions"
++++
+
 <div class="cover">
   <h1>Jeep Wrangler Diesel Conversion</h1>
   <img src="/images/jeep-diesel-engine-conversion-001.jpg" style="position: absolute; bottom: 0;" />
