--- a/content/jeep-hemi-conversions/_index.html
+++ b/content/jeep-hemi-conversions/_index.html
@@ -1,3 +1,7 @@
++++
+title = "Jeep Wrangler Hemi Conversions"
++++
+
 <div class="cover">
   <h1>Jeep Wrangler Hemi Conversion</h1>
   <img src="/images/jeep-hemi-engine-conversion-001.jpg" style="position: absolute; bottom: -100px;" />
