--- a/content/jeep-diesel-conversions/_index.html
+++ b/content/jeep-diesel-conversions/_index.html
@@ -1,6 +1,6 @@
-+++
-title = "Jeep Wrangler Diesel Conversions"
-+++
+---
+title: Jeep Wrangler Diesel Conversions
+---
 
 <div class="cover">
   <h1>Jeep Wrangler Diesel Conversion</h1>
