--- a/content/jeep-hemi-conversions/_index.html
+++ b/content/jeep-hemi-conversions/_index.html
@@ -1,6 +1,6 @@
-+++
-title = "Jeep Wrangler Hemi Conversions"
-+++
+---
+title: Jeep Wrangler Hemi Conversions
+---
 
 <div class="cover">
   <h1>Jeep Wrangler Hemi Conversion</h1>
