--- a/content/jeep-ls-conversions/_index.html
+++ b/content/jeep-ls-conversions/_index.html
@@ -1,6 +1,6 @@
-+++
-title = "Jeep Wrangler LS Conversions"
-+++
+---
+title: Jeep Wrangler LS Conversions
+---
 
 <div class="cover">
   <h1>Jeep Wrangler LS Conversion</h1>
