--- a/content/feed/_index.html
+++ b/content/feed/_index.html
@@ -1,3 +1,8 @@
+---
+aliases:
+    - /news
+---
+
 <div class="cover">
   <h1 style="margin-top: 300px">Bruiser Conversions Feed</h1>
   <img src="/images/bruiser-conversions-news-001.jpg" style="position: absolute; bottom: -200px;" />
