--- a/public/jeep-hemi-conversions/index.html
+++ b/public/jeep-hemi-conversions/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Bruiser Conversions</title>
+  <title>Jeep Wrangler Hemi Conversions</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -23,7 +23,6 @@
 
   ga('create', 'UA-51894707-6', 'auto');
   ga('send', 'pageview');
-
 </script>
 
   <body>
