--- a/public/jeep-ls-conversions/index.html
+++ b/public/jeep-ls-conversions/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Bruiser Conversions</title>
+  <title>Jeep Wrangler LS Conversions</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -23,7 +23,6 @@
 
   ga('create', 'UA-51894707-6', 'auto');
   ga('send', 'pageview');
-
 </script>
 
   <body>
@@ -81,7 +80,7 @@
 <div class="container">
 	<div class="row m-b-3">
     <div class="col-sm-6">
-       <div class="galleria">              
+       <div class="galleria">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg">
