--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,7 @@ aliases:
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <a href="/jeep-ls-conversions">
+      <a href="/jeep-ls-conversion">
         <div class="title">LS Engine Conversion</div>
         <img src="images/jeep-ls-engine-conversion-002.jpg" />
       </a>
